--- a/mbdyn/AUTHORS
+++ b/mbdyn/AUTHORS
@@ -127,6 +127,9 @@ Mauro Manetti, as Ph.D. student, developed the screw joint.
 
 Riccardo Vescovini, as Ph.D. student, is developing the shell element.
 
+Reinhard Resch, as an independent user, provided selected improvements,
+	mainly user-defined elements for special features.
+
 Other undergrads might have had a role in the F77 version of the code, 
 that I'm not aware of.
 
