--- a/mbdyn/NEWS
+++ b/mbdyn/NEWS
@@ -9,6 +9,8 @@ Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 
+* Jun 21, 2011: release of MBDyn 1.4.0
+
 * Feb 08, 2011: release of MBDyn 1.3.18
 
 * Jan 29, 2011: release of MBDyn 1.3.17
