--- a/mbdyn/manual/tecman/tecman-shell.tex
+++ b/mbdyn/manual/tecman/tecman-shell.tex
@@ -302,7 +302,7 @@ The virtual variation of $\T{\varphi}$ at the integration point is related to th
 with:
 \begin{equation}
 \T{ \Phi }_n \valxii =
-\overline{ \TT{T} } \tilde{\TT{\Gamma}} \plbr{ \tilde{ \T{\varphi} \valxii } }  \tilde{\TT{\Gamma}} ^ {-1} \plbr{ \tilde{ \T{\varphi} }_n } \overline{ \TT{T} } ^ T
+\overline{ \TT{T} } \tilde{\TT{\Gamma}} \plbr{ \tilde{ \T{\varphi}}  \valxii }  \tilde{\TT{\Gamma}} ^ {-1} \plbr{ \tilde{ \T{\varphi} }_n } \overline{ \TT{T} } ^ T
 \end{equation}
 Similarly the virtual variation of $\T{\varphi}$ can be obtained at the shear evaluation points as:
 \begin{equation}
@@ -396,7 +396,7 @@ where the generic term $s_{ i, k }$ is the element $\plbr{i,k}$ of the matrix $\
 \end{equation}
 where $\T{\mathcal{P}}$ is a permutation matrix defined as:
 \begin{equation}
-\underset{ 12 \times 7 }{ \T{\mathcal{P}} } =
+\underset{ 12 \times 4 }{ \T{\mathcal{P}} } =
 \sqbr{ \matr{ c c c c  }{
 1 & 0 & 0 & 0 \\
 0 & 0 & 1 & 0 \\
