--- a/mbdyn/manual/input/problems.tex
+++ b/mbdyn/manual/input/problems.tex
@@ -636,8 +636,8 @@ where $\texttt{dCoef}$ is defined in the \texttt{.m} file;
 $\plbr{\TT{J}_{(+c)} + \Lambda \TT{J_{(-c)}}}\T{V_R}=\T{0}$;
 only the eigenvectors corresponding to the selected eigenvalues are output;
 
-\item \texttt{VR}: the left eigenvectors, solution of the problem
-$\plbr{\TT{J}_{(+c)} + \Lambda \TT{J_{(-c)}}}^T\T{V_R}=\T{0}$;
+\item \texttt{VL}: the left eigenvectors, solution of the problem
+$\plbr{\TT{J}_{(+c)} + \Lambda \TT{J_{(-c)}}}^T\T{V_L}=\T{0}$;
 only the eigenvectors corresponding to the selected eigenvalues are output;
 
 \item \texttt{X0}: a vector containing the reference position
